test/libsolidity/syntaxTests/dataLocations/transient_mapping_state_variable.sol
contract C {
	mapping(uint => uint) transient y;
}

// ----
// UnimplementedFeatureError 1834: Transient data location is only supported for value types.
